# intraday_system

./: .gitattributes  .gitignore  CHANGES.md  CODEX_REVIEW.md  Makefile  NEXT_HANDOFF.md  PROGRESS.md  PROJECT_STATUS.md  README.md  intraday_system_design_instructions.txt  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/current10_refined_readiness_phase18d/: CHATGPT_REVIEW_BUNDLE.md  SOURCE_MAP.csv  artifact_schema_validation.csv  chatgpt_key_tables.csv  current10_v2_readiness_matrix.csv  local_artifact_hygiene_note.md  missing_feature_error_shape_assessment.md  non_promotion_guardrails.md  phase18d_decision.md  phase19_strategy_addition_template.md  phase19_to_22_onboarding_gate_matrix.csv  strategy_onboarding_checklist_v2.md  v2_feature_inspect_summary.csv  v2_grid_inspect_summary.csv  v2_layer1_grid_inspect_summary.csv  v2_package_contract_alignment.csv  v2_strategy_inspect_summary.csv  validation_results.csv
artifacts/data_foundation_phase1/: CHATGPT_REVIEW_BUNDLE.md  SOURCE_MAP.csv  baseline_inventory.csv  baseline_inventory.md  catalog_fix_summary.csv  catalog_fix_summary.md  chatgpt_key_tables.csv  data_foundation_decision.md  data_tracking_policy.csv  data_tracking_policy.md  local_path_hygiene_audit.csv  (+8 more)
configs/: README.md
data/: README.md
docs/: ARCHITECTURE.md  BACKTEST_CONTRACT.md  CACHE_CONTRACT.md  CONFIG_CONTRACT.md  DATA_CONTRACT.md  DESIGN_BASELINE.md  DEVELOPMENT_WORKFLOW.md  EXECUTION_CONTRACT.md  FEATURE_CONTRACT.md  LAYER1_CANDIDATE_SELECTION_CONTRACT.md  LAYER1_CONTRACT.md  LAYER_FLOW.md  PHASE_PLAN.md  PROJECT_STRUCTURE.md  QT_REFERENCE_POLICY.md  SETUP_CODE_REGISTRY.md  STRATEGY_CONTRACT.md  STRATEGY_FAMILY_ONBOARDING_CONTRACT.md
scripts/: README.md  bootstrap_from_qt.py  generate_phase7_dry_run.py  phase17_region_review.py  phase18_improvement_design.py  validate_repo.py
(+1425 files in other folders)
