[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-system"
version = "0.1.0a0"
description = "Centralized, array-first intraday research engine (Layer 0/1/2/3)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "intraday_system" }]
keywords = ["intraday", "research", "backtesting", "numba", "parquet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "polars>=0.20",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/yukepenn/intraday_system"
Source = "https://github.com/yukepenn/intraday_system"

[project.scripts]
intraday = "intraday.cli.main:app_entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["intraday*"]

[tool.setuptools.package-data]
intraday = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "artifacts", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
